feature(功能） 1.增加动态注册客户端功能

--- a/authorization-server/src/main/resources/application.yml
+++ b/authorization-server/src/main/resources/application.yml
@@ -3,11 +3,12 @@ logging:
   level:
     org:
       springframework:
+        web: TRACE
         security:
-          oauth2: DEBUG
-          oauth2.client: DEBUG
-          oauth2.core: DEBUG
-          oauth2.server: DEBUG
+          oauth2: TRACE
+          oauth2.client: TRACE
+          oauth2.core: TRACE
+          oauth2.server: TRACE
 
 server:
   port: 9000
